@@ -38,6 +38,8 @@ import com.adyen.v6.controllers.dtos.PaymentResultDTO;
 import com.adyen.v6.converters.PaymentsDetailsResponseConverter;
 import com.adyen.v6.converters.PaymentsResponseConverter;
 import com.adyen.v6.converters.PosPaymentResponseConverter;
+import com.adyen.v6.dto.CheckoutConfigDTO;
+import com.adyen.v6.dto.CheckoutConfigDTOBuilder;
 import com.adyen.v6.enums.AdyenCardTypeEnum;
 import com.adyen.v6.enums.AdyenRegions;
 import com.adyen.v6.enums.RecurringContractMode;
@@ -66,6 +68,7 @@ import de.hybris.platform.commercefacades.order.OrderFacade;
 import de.hybris.platform.commercefacades.order.data.CartData;
 import de.hybris.platform.commercefacades.order.data.OrderData;
 import de.hybris.platform.commercefacades.product.data.ProductData;
+import de.hybris.platform.commercefacades.user.UserFacade;
 import de.hybris.platform.commercefacades.user.data.AddressData;
 import de.hybris.platform.commercefacades.user.data.CountryData;
 import de.hybris.platform.commercefacades.user.data.RegionData;
@@ -105,7 +108,7 @@ import org.springframework.beans.factory.annotation.Required;
 import org.springframework.transaction.support.TransactionOperations;
 import org.springframework.ui.Model;
 import org.springframework.util.CollectionUtils;
-import org.springframework.validation.BindingResult;
+import org.springframework.validation.Errors;
 
 import javax.annotation.Resource;
 import javax.servlet.http.HttpServletRequest;
@@ -165,6 +168,8 @@ public class DefaultAdyenCheckoutFacade implements AdyenCheckoutFacade {
     private AdyenBusinessProcessService adyenBusinessProcessService;
     private TransactionOperations transactionTemplate;
     private AdyenExpressCheckoutFacade adyenExpressCheckoutFacade;
+    private UserFacade userFacade;
+    private I18NFacade i18NFacade;
 
     @Resource(name = "i18NFacade")
     private I18NFacade i18NFacade;
@@ -297,6 +302,7 @@ public class DefaultAdyenCheckoutFacade implements AdyenCheckoutFacade {
 
         return paymentDetails;
     }
+
 
     private AddressModel createBillingAddress(PaymentDetailsWsDTO paymentDetails) {
         String titleCode = paymentDetails.getBillingAddress().getTitleCode();
@@ -650,6 +656,150 @@ public class DefaultAdyenCheckoutFacade implements AdyenCheckoutFacade {
 
     @Override
     public void initializeCheckoutData(Model model) throws ApiException {
+        CheckoutConfigDTO checkoutConfigDTO = getCheckoutConfig();
+
+        model.addAttribute(SESSION_DATA, checkoutConfigDTO.getSessionData());
+
+        // current selected PaymentMethod
+        model.addAttribute(MODEL_SELECTED_PAYMENT_METHOD, checkoutConfigDTO.getSelectedPaymentMethod());
+
+        //Set payment methods
+        model.addAttribute(MODEL_PAYMENT_METHODS, checkoutConfigDTO.getAlternativePaymentMethods());
+
+        //Set allowed Credit Cards
+        model.addAttribute(MODEL_CREDIT_CARD_LABEL, checkoutConfigDTO.getCreditCardLabel());
+        model.addAttribute(MODEL_ALLOWED_CARDS, checkoutConfigDTO.getAllowedCards());
+
+        model.addAttribute(MODEL_REMEMBER_DETAILS, checkoutConfigDTO.isShowRememberTheseDetails());
+        model.addAttribute(MODEL_STORED_CARDS, checkoutConfigDTO.getStoredPaymentMethodList());
+        model.addAttribute(MODEL_DF_URL, checkoutConfigDTO.getDeviceFingerPrintUrl());
+        model.addAttribute(MODEL_CHECKOUT_SHOPPER_HOST, checkoutConfigDTO.getCheckoutShopperHost());
+        model.addAttribute(MODEL_ENVIRONMENT_MODE, checkoutConfigDTO.getEnvironmentMode());
+        model.addAttribute(SHOPPER_LOCALE, checkoutConfigDTO.getShopperLocale());
+
+        // OpenInvoice Methods
+        model.addAttribute(MODEL_OPEN_INVOICE_METHODS, checkoutConfigDTO.getOpenInvoiceMethods());
+
+        // retrieve shipping Country to define if social security number needs to be shown or date of birth field for openinvoice methods
+        model.addAttribute(MODEL_SHOW_SOCIAL_SECURITY_NUMBER, checkoutConfigDTO.isShowSocialSecurityNumber());
+
+        //Include Boleto banks
+        model.addAttribute(MODEL_SHOW_BOLETO, checkoutConfigDTO.isShowBoleto());
+
+        //Enable combo card flag
+        model.addAttribute(MODEL_SHOW_COMBO_CARD, checkoutConfigDTO.isShowComboCard());
+
+        //Include POS Enable configuration
+        model.addAttribute(MODEL_SHOW_POS, checkoutConfigDTO.isShowPos());
+        //Include connnected terminal List for POS
+        model.addAttribute(MODEL_CONNECTED_TERMINAL_LIST, checkoutConfigDTO.getConnectedTerminalList());
+        //Include Issuer Lists
+        model.addAttribute(MODEL_ISSUER_LISTS, checkoutConfigDTO.getIssuerLists());
+
+        //Include information for components
+        model.addAttribute(MODEL_CLIENT_KEY, checkoutConfigDTO.getAdyenClientKey());
+        model.addAttribute(MODEL_AMOUNT, checkoutConfigDTO.getAmount());
+        model.addAttribute(MODEL_IMMEDIATE_CAPTURE, checkoutConfigDTO.isImmediateCapture());
+        model.addAttribute(MODEL_PAYPAL_MERCHANT_ID, checkoutConfigDTO.getAdyenPaypalMerchantId());
+        model.addAttribute(MODEL_COUNTRY_CODE, checkoutConfigDTO.getCountryCode());
+        model.addAttribute(MODEL_CARD_HOLDER_NAME_REQUIRED, checkoutConfigDTO.isCardHolderNameRequired());
+        model.addAttribute(PAYMENT_METHOD_SEPA_DIRECTDEBIT, checkoutConfigDTO.isSepaDirectDebit());
+    }
+
+    public CheckoutConfigDTO getReactCheckoutConfig() throws ApiException {
+        final CartData cartData = getCheckoutFacade().getCheckoutCart();
+        AdyenPaymentService adyenPaymentService = getAdyenPaymentService();
+        List<PaymentMethod> paymentMethods;
+        List<String> connectedTerminalList = null;
+        List<StoredPaymentMethod> storedPaymentMethodList = null;
+        BaseStoreModel baseStore;
+        CustomerModel customerModel = getCheckoutCustomerStrategy().getCurrentUserForCheckout();
+        PaymentMethodsResponse response = new PaymentMethodsResponse();
+        CartModel cartModel = cartService.getSessionCart();
+
+        //to remove unwanted payment methods insert them here
+        List<String> excludedPaymentMethods = new ArrayList<>();
+
+        try {
+            if (showPos()) {
+                connectedTerminalList = adyenPaymentService.getConnectedTerminals().getUniqueTerminalIds();
+            }
+
+            response = getPaymentMethods(adyenPaymentService, cartData, customerModel, excludedPaymentMethods);
+        } catch (ApiException | IOException e) {
+            LOGGER.error(ExceptionUtils.getStackTrace(e));
+        }
+
+        paymentMethods = response.getPaymentMethods();
+
+        //apple pay
+        Map<String, String> applePayConfig = getApplePayConfigFromPaymentMethods(paymentMethods);
+        if (!CollectionUtils.isEmpty(applePayConfig)) {
+            cartModel.setAdyenApplePayMerchantName(applePayConfig.get("merchantName"));
+            cartModel.setAdyenApplePayMerchantIdentifier(applePayConfig.get("merchantId"));
+        }
+
+        baseStore = baseStoreService.getCurrentBaseStore();
+
+        //Verify allowedCards
+        PaymentMethod cardsPaymentMethod = paymentMethods.stream()
+                .filter(paymentMethod -> PAYMENT_METHOD_SCHEME.equals(paymentMethod.getType()))
+                .findAny().orElse(null);
+
+        if (cardsPaymentMethod != null) {
+            List<String> allowedCards = baseStore.getAdyenAllowedCards().stream().map(AdyenCardTypeEnum::getCode).toList();
+
+            List<String> cardBrands = cardsPaymentMethod.getBrands();
+            allowedCards = allowedCards.stream()
+                    .filter(cardBrands::contains)
+                    .toList();
+
+            cardsPaymentMethod.setBrands(allowedCards);
+        }
+
+        if (showRememberDetails()) {
+            //Include stored one-click cards
+            storedPaymentMethodList = getStoredOneClickPaymentMethods(response);
+            Set<String> recurringDetailReferences = new HashSet<>();
+            if (storedPaymentMethodList != null) {
+                recurringDetailReferences = storedPaymentMethodList.stream().map(StoredPaymentMethod::getId).collect(Collectors.toSet());
+            }
+            cartModel.setAdyenStoredCards(recurringDetailReferences);
+        }
+
+        modelService.save(cartModel);
+
+        Amount amount = Util.createAmount(cartData.getTotalPriceWithTax().getValue(), cartData.getTotalPriceWithTax().getCurrencyIso());
+
+        CheckoutConfigDTOBuilder checkoutConfigDTOBuilder = new CheckoutConfigDTOBuilder();
+
+        return checkoutConfigDTOBuilder
+                .setPaymentMethods(paymentMethods)
+                .setConnectedTerminalList(connectedTerminalList)
+                .setStoredPaymentMethodList(storedPaymentMethodList)
+                .setAmount(amount)
+                .setAdyenClientKey(baseStore.getAdyenClientKey())
+                .setAdyenPaypalMerchantId(baseStore.getAdyenPaypalMerchantId())
+                .setDeviceFingerPrintUrl(adyenPaymentService.getDeviceFingerprintUrl())
+                .setSessionData(getAdyenSessionData())
+                .setSelectedPaymentMethod(cartData.getAdyenPaymentMethod())
+                .setShowRememberTheseDetails(showRememberDetails())
+                .setCheckoutShopperHost(getCheckoutShopperHost())
+                .setEnvironmentMode(getEnvironmentMode())
+                .setShopperLocale(getShopperLocale())
+                .setOpenInvoiceMethods(OPENINVOICE_METHODS_API)
+                .setShowSocialSecurityNumber(showSocialSecurityNumber())
+                .setShowBoleto(showBoleto())
+                .setShowComboCard(showComboCard())
+                .setShowPos(showPos())
+                .setImmediateCapture(isImmediateCapture())
+                .setCountryCode(cartData.getDeliveryAddress().getCountry().getIsocode())
+                .setCardHolderNameRequired(getHolderNameRequired())
+                .build();
+    }
+
+    @Deprecated
+    public CheckoutConfigDTO getCheckoutConfig() throws ApiException {
         final CartData cartData = getCheckoutFacade().getCheckoutCart();
         AdyenPaymentService adyenPaymentService = getAdyenPaymentService();
         List<PaymentMethod> alternativePaymentMethods;
@@ -666,34 +816,15 @@ public class DefaultAdyenCheckoutFacade implements AdyenCheckoutFacade {
                 connectedTerminalList = adyenPaymentService.getConnectedTerminals().getUniqueTerminalIds();
             }
 
-            response = adyenPaymentService.getPaymentMethodsResponse(cartData.getTotalPriceWithTax().getValue(),
-                    cartData.getTotalPriceWithTax().getCurrencyIso(),
-                    cartData.getDeliveryAddress().getCountry().getIsocode(),
-                    getShopperLocale(),
-                    customerModel.getCustomerID());
+            response = getPaymentMethods(adyenPaymentService, cartData, customerModel);
         } catch (ApiException | IOException e) {
             LOGGER.error(ExceptionUtils.getStackTrace(e));
         }
 
         alternativePaymentMethods = response.getPaymentMethods();
 
-        final List<PaymentMethod> issuerPaymentMethods = alternativePaymentMethods.stream()
-                .filter(paymentMethod -> !paymentMethod.getType().isEmpty() && ISSUER_PAYMENT_METHODS.contains(paymentMethod.getType()))
-                .collect(Collectors.toList());
-        if (!CollectionUtils.isEmpty(issuerPaymentMethods)) {
-            Gson gson = new Gson();
-            for (PaymentMethod paymentMethod : issuerPaymentMethods) {
-                issuerLists.put(paymentMethod.getType(), gson.toJson(paymentMethod.getIssuers()));
-            }
-        }
-
-        Optional<PaymentMethod> sepaDirectDebit = alternativePaymentMethods.stream().
-                filter(paymentMethod -> !paymentMethod.getType().isEmpty() &&
-                        PAYMENT_METHOD_SEPA_DIRECTDEBIT.contains(paymentMethod.getType())).findFirst();
-
-        if (sepaDirectDebit.isPresent()) {
-            model.addAttribute(PAYMENT_METHOD_SEPA_DIRECTDEBIT, true);
-        }
+        final List<PaymentMethod> issuerPaymentMethods = getIssuerPaymentMethods(alternativePaymentMethods);
+        updateIssuerList(issuerPaymentMethods, issuerLists);
 
         //apple pay
         Map<String, String> applePayConfig = getApplePayConfigFromPaymentMethods(alternativePaymentMethods);
@@ -702,41 +833,35 @@ public class DefaultAdyenCheckoutFacade implements AdyenCheckoutFacade {
             cartModel.setAdyenApplePayMerchantIdentifier(applePayConfig.get("merchantId"));
         }
 
+        boolean sepaDirectDebit = isSepaDirectDebit(alternativePaymentMethods);
+
         //amazon pay
-        Optional<PaymentMethod> amazonPayMethod = alternativePaymentMethods.stream()
-                .filter(paymentMethod -> !paymentMethod.getType().isEmpty()
-                        && PAYMENT_METHOD_AMAZONPAY.contains(paymentMethod.getType()))
-                .findFirst();
-        if (amazonPayMethod.isPresent()) {
-            Map<String, String> amazonPayConfiguration = amazonPayMethod.get().getConfiguration();
-            if (!CollectionUtils.isEmpty(amazonPayConfiguration)) {
-                cartModel.setAdyenAmazonPayConfiguration(amazonPayConfiguration);
-            }
-        }
+        Optional<PaymentMethod> amazonPayMethod = getAmazonPayMethod(alternativePaymentMethods);
+        amazonPayMethod.ifPresent(paymentMethod -> updateCartWithAmazonPay(paymentMethod, cartModel));
 
         baseStore = baseStoreService.getCurrentBaseStore();
 
         //Verify allowedCards
         String creditCardLabel = null;
-        Set<AdyenCardTypeEnum> allowedCards = null;
+        List<AdyenCardTypeEnum> allowedCards = null;
         PaymentMethod cardsPaymentMethod = alternativePaymentMethods.stream()
                 .filter(paymentMethod -> PAYMENT_METHOD_SCHEME.equals(paymentMethod.getType()))
                 .findAny().orElse(null);
 
         if (cardsPaymentMethod != null) {
             creditCardLabel = cardsPaymentMethod.getName();
-            allowedCards = baseStore.getAdyenAllowedCards();
+            allowedCards = baseStore.getAdyenAllowedCards().stream().toList();
 
             List<String> cardBrands = cardsPaymentMethod.getBrands();
             allowedCards = allowedCards.stream()
                     .filter(adyenCardTypeEnum -> cardBrands.contains(adyenCardTypeEnum.getCode()))
-                    .collect(Collectors.toSet());
+                    .toList();
         }
 
         //Exclude cards, boleto and iDeal
         alternativePaymentMethods = alternativePaymentMethods.stream()
                 .filter(paymentMethod -> !paymentMethod.getType().isEmpty() && !isHiddenPaymentMethod(paymentMethod))
-                .collect(Collectors.toList());
+                .toList();
 
         if (showRememberDetails()) {
             //Include stored one-click cards
@@ -748,55 +873,92 @@ public class DefaultAdyenCheckoutFacade implements AdyenCheckoutFacade {
             cartModel.setAdyenStoredCards(recurringDetailReferences);
         }
 
+        modelService.save(cartModel);
+
         Amount amount = Util.createAmount(cartData.getTotalPriceWithTax().getValue(), cartData.getTotalPriceWithTax().getCurrencyIso());
 
-        model.addAttribute(SESSION_DATA, getAdyenSessionData());
+        CheckoutConfigDTOBuilder checkoutConfigDTOBuilder = new CheckoutConfigDTOBuilder();
 
-        // current selected PaymentMethod
-        model.addAttribute(MODEL_SELECTED_PAYMENT_METHOD, cartData.getAdyenPaymentMethod());
+        return checkoutConfigDTOBuilder.setAlternativePaymentMethods(alternativePaymentMethods)
+                .setConnectedTerminalList(connectedTerminalList)
+                .setStoredPaymentMethodList(storedPaymentMethodList)
+                .setIssuerLists(issuerLists)
+                .setCreditCardLabel(creditCardLabel)
+                .setAllowedCards(allowedCards)
+                .setAmount(amount)
+                .setAdyenClientKey(baseStore.getAdyenClientKey())
+                .setAdyenPaypalMerchantId(baseStore.getAdyenPaypalMerchantId())
+                .setDeviceFingerPrintUrl(adyenPaymentService.getDeviceFingerprintUrl())
+                .setSessionData(getAdyenSessionData())
+                .setSelectedPaymentMethod(cartData.getAdyenPaymentMethod())
+                .setShowRememberTheseDetails(showRememberDetails())
+                .setCheckoutShopperHost(getCheckoutShopperHost())
+                .setEnvironmentMode(getEnvironmentMode())
+                .setShopperLocale(getShopperLocale())
+                .setOpenInvoiceMethods(OPENINVOICE_METHODS_API)
+                .setShowSocialSecurityNumber(showSocialSecurityNumber())
+                .setShowBoleto(showBoleto())
+                .setShowComboCard(showComboCard())
+                .setShowPos(showPos())
+                .setImmediateCapture(isImmediateCapture())
+                .setCountryCode(cartData.getDeliveryAddress().getCountry().getIsocode())
+                .setCardHolderNameRequired(getHolderNameRequired())
+                .setSepaDirectDebit(sepaDirectDebit)
+                .build();
+    }
 
-        //Set payment methods
-        model.addAttribute(MODEL_PAYMENT_METHODS, alternativePaymentMethods);
+    @Deprecated
+    private static boolean isSepaDirectDebit(List<PaymentMethod> alternativePaymentMethods) {
+        return alternativePaymentMethods.stream().
+                anyMatch(paymentMethod -> !paymentMethod.getType().isEmpty() &&
+                        PAYMENT_METHOD_SEPA_DIRECTDEBIT.contains(paymentMethod.getType()));
+    }
 
-        //Set allowed Credit Cards
-        model.addAttribute(MODEL_CREDIT_CARD_LABEL, creditCardLabel);
-        model.addAttribute(MODEL_ALLOWED_CARDS, allowedCards);
+    private static void updateCartWithAmazonPay(PaymentMethod amazonPayMethod, CartModel cartModel) {
+        Map<String, String> amazonPayConfiguration = amazonPayMethod.getConfiguration();
+        if (!CollectionUtils.isEmpty(amazonPayConfiguration)) {
+            cartModel.setAdyenAmazonPayConfiguration(amazonPayConfiguration);
+        }
+    }
 
-        model.addAttribute(MODEL_REMEMBER_DETAILS, showRememberDetails());
-        model.addAttribute(MODEL_STORED_CARDS, storedPaymentMethodList);
-        model.addAttribute(MODEL_DF_URL, adyenPaymentService.getDeviceFingerprintUrl());
-        model.addAttribute(MODEL_CHECKOUT_SHOPPER_HOST, getCheckoutShopperHost());
-        model.addAttribute(MODEL_ENVIRONMENT_MODE, getEnvironmentMode());
-        model.addAttribute(SHOPPER_LOCALE, getShopperLocale());
+    private static Optional<PaymentMethod> getAmazonPayMethod(List<PaymentMethod> alternativePaymentMethods) {
+        return alternativePaymentMethods.stream()
+                .filter(paymentMethod -> !paymentMethod.getType().isEmpty()
+                        && PAYMENT_METHOD_AMAZONPAY.contains(paymentMethod.getType()))
+                .findFirst();
+    }
 
-        // OpenInvoice Methods
-        model.addAttribute(MODEL_OPEN_INVOICE_METHODS, OPENINVOICE_METHODS_API);
+    @Deprecated
+    private static void updateIssuerList(List<PaymentMethod> issuerPaymentMethods, Map<String, String> issuerLists) {
+        if (!CollectionUtils.isEmpty(issuerPaymentMethods)) {
+            Gson gson = new Gson();
+            for (PaymentMethod paymentMethod : issuerPaymentMethods) {
+                issuerLists.put(paymentMethod.getType(), gson.toJson(paymentMethod.getIssuers()));
+            }
+        }
+    }
 
-        // retrieve shipping Country to define if social security number needs to be shown or date of birth field for openinvoice methods
-        model.addAttribute(MODEL_SHOW_SOCIAL_SECURITY_NUMBER, showSocialSecurityNumber());
+    @Deprecated
+    private static List<PaymentMethod> getIssuerPaymentMethods(List<PaymentMethod> alternativePaymentMethods) {
+        return alternativePaymentMethods.stream()
+                .filter(paymentMethod -> !paymentMethod.getType().isEmpty() && ISSUER_PAYMENT_METHODS.contains(paymentMethod.getType()))
+                .toList();
+    }
 
-        //Include Boleto banks
-        model.addAttribute(MODEL_SHOW_BOLETO, showBoleto());
+    private PaymentMethodsResponse getPaymentMethods(AdyenPaymentService adyenPaymentService, CartData cartData, CustomerModel customerModel) throws IOException, ApiException {
+        return adyenPaymentService.getPaymentMethodsResponse(cartData.getTotalPriceWithTax().getValue(),
+                cartData.getTotalPriceWithTax().getCurrencyIso(),
+                cartData.getDeliveryAddress().getCountry().getIsocode(),
+                getShopperLocale(),
+                customerModel.getCustomerID());
+    }
 
-        //Enable combo card flag
-        model.addAttribute(MODEL_SHOW_COMBO_CARD, showComboCard());
-
-        //Include POS Enable configuration
-        model.addAttribute(MODEL_SHOW_POS, showPos());
-        //Include connnected terminal List for POS
-        model.addAttribute(MODEL_CONNECTED_TERMINAL_LIST, connectedTerminalList);
-        //Include Issuer Lists
-        model.addAttribute(MODEL_ISSUER_LISTS, issuerLists);
-
-        //Include information for components
-        model.addAttribute(MODEL_CLIENT_KEY, baseStore.getAdyenClientKey());
-        model.addAttribute(MODEL_AMOUNT, amount);
-        model.addAttribute(MODEL_IMMEDIATE_CAPTURE, isImmediateCapture());
-        model.addAttribute(MODEL_PAYPAL_MERCHANT_ID, baseStore.getAdyenPaypalMerchantId());
-        model.addAttribute(MODEL_COUNTRY_CODE, cartData.getDeliveryAddress().getCountry().getIsocode());
-        model.addAttribute(MODEL_CARD_HOLDER_NAME_REQUIRED, getHolderNameRequired());
-
-        modelService.save(cartModel);
+    private PaymentMethodsResponse getPaymentMethods(AdyenPaymentService adyenPaymentService, CartData cartData, CustomerModel customerModel, List<String> excludedPaymentMethods) throws IOException, ApiException {
+        return adyenPaymentService.getPaymentMethodsResponse(cartData.getTotalPriceWithTax().getValue(),
+                cartData.getTotalPriceWithTax().getCurrencyIso(),
+                cartData.getDeliveryAddress().getCountry().getIsocode(),
+                getShopperLocale(),
+                customerModel.getCustomerID(), excludedPaymentMethods);
     }
 
     private Map<String, String> getApplePayConfigFromPaymentMethods(List<PaymentMethod> paymentMethods) {
@@ -1150,7 +1312,7 @@ public class DefaultAdyenCheckoutFacade implements AdyenCheckoutFacade {
     }
 
     @Override
-    public void handlePaymentForm(AdyenPaymentForm adyenPaymentForm, BindingResult bindingResult) {
+    public void handlePaymentForm(AdyenPaymentForm adyenPaymentForm, Errors errors) {
         //Validate form
         CartModel cartModel = cartService.getSessionCart();
         boolean showRememberDetails = showRememberDetails();
@@ -1162,10 +1324,17 @@ public class DefaultAdyenCheckoutFacade implements AdyenCheckoutFacade {
             adyenPaymentFormValidator.setTelephoneNumberRequired(true);
         }
 
-        adyenPaymentFormValidator.validate(adyenPaymentForm, bindingResult);
+        adyenPaymentFormValidator.validate(adyenPaymentForm, errors);
 
-        if (bindingResult.hasErrors()) {
+        if (errors.hasErrors()) {
             return;
+        }
+
+        if (!checkoutCustomerStrategy.isAnonymousCheckout() && adyenPaymentForm.getBillingAddress().isSaveInAddressBook()) {
+            AddressData addressData = convertToAddressData(adyenPaymentForm.getBillingAddress());
+            addressData.setVisibleInAddressBook(true);
+            addressData.setShippingAddress(true);
+            userFacade.addAddress(addressData);
         }
 
         //Put encrypted data to session
@@ -1208,6 +1377,14 @@ public class DefaultAdyenCheckoutFacade implements AdyenCheckoutFacade {
     }
 
     public AddressModel convertToAddressModel(final AddressForm addressForm) {
+        final AddressData addressData = convertToAddressData(addressForm);
+        final AddressModel billingAddress = getModelService().create(AddressModel.class);
+        getAddressReverseConverter().convert(addressData, billingAddress);
+
+        return billingAddress;
+    }
+
+    private AddressData convertToAddressData(AddressForm addressForm) {
         final AddressData addressData = new AddressData();
         final CountryData countryData = getI18NFacade().getCountryForIsocode(addressForm.getCountryIsoCode());
         addressData.setTitleCode(addressForm.getTitleCode());
@@ -1225,10 +1402,7 @@ public class DefaultAdyenCheckoutFacade implements AdyenCheckoutFacade {
             final RegionData regionData = getI18NFacade().getRegion(addressForm.getCountryIsoCode(), addressForm.getRegionIso());
             addressData.setRegion(regionData);
         }
-        final AddressModel billingAddress = getModelService().create(AddressModel.class);
-        getAddressReverseConverter().convert(addressData, billingAddress);
-
-        return billingAddress;
+        return addressData;
     }
 
     @Override
@@ -1698,5 +1872,13 @@ public class DefaultAdyenCheckoutFacade implements AdyenCheckoutFacade {
 
     public void setAdyenExpressCheckoutFacade(AdyenExpressCheckoutFacade adyenExpressCheckoutFacade) {
         this.adyenExpressCheckoutFacade = adyenExpressCheckoutFacade;
+    }
+
+    public void setUserFacade(UserFacade userFacade) {
+        this.userFacade = userFacade;
+    }
+
+    public void setConfigurationService(ConfigurationService configurationService) {
+        this.configurationService = configurationService;
     }
 }
